(library
 (name dap)
 (public_name dap)
 (preprocess (pps ppx_deriving_yojson ppx_here ppx_deriving.make))
 (libraries yojson ppx_deriving_yojson.runtime))

(rule
  (target dap.ml)
  (mode (promote (until-clean)))
  (deps (:json ../debugAdapterProtocol.json) ../scripts/gen_dap_dot_ml.js)
  (action (with-stdout-to %{target} (run node ../scripts/gen_dap_dot_ml.js -- %{json}))))
